--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.musicplayer.ccl.music_player.ui.activity.MainActivity">
+    android:background="@drawable/base_bg">
 
-    <TextView
-        android:id="@id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--标题栏-->
+    <LinearLayout
+        android:id="@+id/main_ll_tabs"
+        android:background="@drawable/base_titlebar_bg"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="55dp">
+        <!--视频-->
+        <TextView
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="视频"
+            android:textSize="16sp"
+            android:textColor="@color/green"/>
+        <!--音乐-->
+        <TextView
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="音乐"
+            android:textSize="16sp"
+            android:textColor="@color/green"/>
+
+
+    </LinearLayout>
+    <!--指示器-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignBottom="@+id/main_ll_tabs"
+        android:background="@color/green" />
+
+
+    <!--播放列表-->
+    <android.support.v4.view.ViewPager
+        android:layout_below="@id/main_ll_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        ></android.support.v4.view.ViewPager>
+
 
 </RelativeLayout>
