--- a/app/src/main/res/layout/video_player_top.xml
+++ b/app/src/main/res/layout/video_player_top.xml
@@ -21,6 +21,7 @@
             android:layout_weight="1"/>
     <!--系统电量-->
         <ImageView
+            android:id="@+id/video_player_iv_battery"
             android:layout_marginRight="6dp"
             android:layout_marginLeft="6dp"
             android:layout_width="wrap_content"
@@ -29,7 +30,8 @@
 
         <!--系统时间-->
         <TextView
-            android:text="文件名"
+            android:id="@+id/video_player_iv_time"
+            android:text="系统时间"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
