--- a/app/src/main/res/layout/video_player_top.xml
+++ b/app/src/main/res/layout/video_player_top.xml
@@ -41,6 +41,7 @@
 
     <!--声音控制栏-->
     <LinearLayout
+        android:padding="6dp"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,11 +49,14 @@
         android:background="@drawable/bg_video_volume_control">
         <!--静音按钮-->
         <ImageView
+            android:id="@+id/video_player_iv_mute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/video_mute_selector"/>
         <!--音量控制条-->
         <SeekBar
+            android:layout_marginRight="14dp"
+            android:id="@+id/video_player_sk_volume"
             android:progress="50"
             android:progressDrawable="@drawable/video_progress_drawable"
             android:thumb="@drawable/video_progress_thumb"
