--- a/app/src/main/res/layout/video_player_top.xml
+++ b/app/src/main/res/layout/video_player_top.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
         <!--文件名-->
         <TextView
+            android:id="@+id/video_player_tv_tittle"
             android:text="文件名"
             android:textSize="16sp"
             android:textColor="@color/white"
