--- a/app/src/main/res/layout/video_player.xml
+++ b/app/src/main/res/layout/video_player.xml
@@ -18,4 +18,12 @@
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"/>
 
+    <View
+        android:id="@+id/video_player_alpha_cover"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#ee000000">
+
+    </View>
+
 </RelativeLayout>
