--- a/app/src/main/res/layout/video_player_bottom.xml
+++ b/app/src/main/res/layout/video_player_bottom.xml
@@ -14,6 +14,7 @@
         <!--已经播放时间-->
 
         <TextView
+            android:id="@+id/video_player_tv_posion"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_width="wrap_content"
@@ -22,6 +23,7 @@
 
         <!--时间进度-->
         <SeekBar
+            android:id="@+id/video_player_sk_posion"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:progress="50"
@@ -35,6 +37,7 @@
             android:layout_weight="1"/>
 <!--视频总时间-->
         <TextView
+            android:id="@+id/video_player_tv_duration"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_width="wrap_content"
