--- a/app/src/main/res/layout/video_player_bottom.xml
+++ b/app/src/main/res/layout/video_player_bottom.xml
@@ -58,6 +58,7 @@
         android:background="@drawable/bg_video_bottom_control">
         <!--返回-->
         <ImageView
+            android:id="@+id/back"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:src="@drawable/video_exit_selector"
@@ -67,6 +68,7 @@
         <!--上一曲-->
 
         <ImageView
+            android:id="@+id/video_player_iv_pre"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:src="@drawable/video_pre_selector"
@@ -84,6 +86,7 @@
         <!--下一曲-->
 
         <ImageView
+            android:id="@+id/video_player_iv_next"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:src="@drawable/video_next_selector"
