--- a/app/src/main/res/layout/main_audio_list.xml
+++ b/app/src/main/res/layout/main_audio_list.xml
@@ -3,10 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="音乐"
-    android:gravity="center"
-    android:textSize="20sp"/>
+<include layout="@layout/simple_listview">
+
+</include>
 </LinearLayout>
