--- a/app/src/main/res/layout/video_player_top.xml
+++ b/app/src/main/res/layout/video_player_top.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:padding="6dp"
+    android:id="@+id/video_player_ll_top"
     android:layout_height="match_parent">
     <!--系统信息栏-->
     <LinearLayout
