--- a/app/src/main/res/layout/video_player.xml
+++ b/app/src/main/res/layout/video_player.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"/>
-
+    <!--亮度遮罩-->
     <View
         android:id="@+id/video_player_alpha_cover"
         android:layout_width="wrap_content"
@@ -26,5 +26,32 @@
         android:background="#ee000000">
 
     </View>
+    <!--加载遮罩-->
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/video_player_ll_loding_cover"
+        android:background="@drawable/bg_player_loading_background"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:text="正在加载中..."
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+<ProgressBar
+    android:visibility="gone"
+    android:layout_centerInParent="true"
+    android:id="@+id/video_player_pd_buffering"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
 
 </RelativeLayout>
