--- a/app/src/main/res/layout/audio_player_middle.xml
+++ b/app/src/main/res/layout/audio_player_middle.xml
@@ -11,7 +11,8 @@
         android:layout_centerHorizontal="true"/>
     <!--歌手名-->
     <TextView
-        android:layout_alignBottom="@+id/audio_player_iv_wave"
+        android:id="@+id/audio_player_iv_arties"
+        android:layout_alignBottom="@id/audio_player_iv_wave"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
