--- a/app/src/main/res/layout/audio_player_bottom.xml
+++ b/app/src/main/res/layout/audio_player_bottom.xml
@@ -33,6 +33,7 @@
         android:orientation="horizontal">
         <!--播放顺序-->
         <ImageView
+            android:id="@+id/video_player_iv_playmode"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
